# nfl-analytics

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
pages/: __init__.py  qb_statistics.py  skill_position_stats.py
queries/: __init__.py  data_loader.py  qb_stats.py  skill_position_stats.py
