[project]
name = "nfl-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "nfl-data-py>=0.3.3",
    "pandas>=1.5.3",
    "pyarrow>=21.0.0",
    "streamlit>=1.49.1",
    "plotly>=5.0.0",
]

[project.scripts]
app = "streamlit run app.py"